# haskell-programming

./: README.md  exercises.hs  notes.md
ch01/: notes.md
ch02/: exercises.hs  notes.md
ch03/: exercises.hs  notes.md  rvrs.hs
ch04/: mood.hs  notes.md
ch05/: arith3.hs  ex.hs  notes.md  sing.hs
ch06/: date.hs  ex_tyk.hs  ex_typeCheck.hs  ex_writeInstances.hs  notes.md  scratchpad.hs
ch07/: arith4.hs  employee.hs  ex_caseEx.hs  ex_code.hs  notes.md  scratchpad.hs
ch08/: misc.hs  notes.md  wordNumber.hs
ch09/: cipher.hs  ex.hs  misc.hs  normalOrNot.md  notes.md  poemLines.hs
ch10/: database.hs  ex.hs  notes.md
ch11/: binaryTree.hs  cipher.hs  ex.hs  farmerRec.hs  garden.hs  huttonrazor.hs  notes.md  numberOrBool.hs  phone.hs  programmers.hs  toomany.hs  vehicles.hs
ch12/: binaryTree.hs  ex.hs  libBool.hs  libEither.hs  naturals.hs  notes.md  word.hs
ch13/: notes.md  palindrome.hs  person.hs
ch13/hangman/: hangman.cabal
ch13/hangman/data/: dict.txt
ch13/hangman/src/: Main.hs
ch14/: ex.hs  notes.md
ch14/experiments/: Addition.hs  experiments.cabal
ch15/: booly.hs  ex.hs  identity_monoid.hs  monoid_ex.hs  notes.md  optional.hs  semigrp_instances.hs  two_monoid.hs  validation.hs
ch15/orphan-instance/: listy.hs  listyInstances.hs
ch16/: chapter_exercises.hs  ex.hs  ex_16_10.hs  ex_16_11.hs  notes.md  sec_16_8.hs  sec_16_9.hs
ch17/: checkers_17_7.hs  ex_17_5.hs  ex_17_8.hs  ex_17_8_2.hs  ex_17_8_3.hs  notes.md  persons.hs
ch18/: badMonad.hs  coders.hs  cow.hs  eitherMonad.hs  ex.hs  ex_1.hs  ex_18_2.hs  notes.md
ch19/shawty/: shawty.cabal
ch19/shawty/src/: Main.hs
ch20/: chex.hs  ex.hs  notes.md
practice/99-problems/: 1_10.hs
practice/scotty/scotty-test/: LICENSE  README.md  scotty-test.cabal
practice/scotty/scotty-test/src/: Main.hs
references/: README.md
