name:                experiments
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/experiments#readme
license:             BSD3
license-file:        LICENSE
author:              Ashutosh Tripathi
maintainer:          azbycs@gmail.com
copyright:           2020 Ashutosh Tripathi
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Addition
  hs-source-dirs:      .
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
