name:                shawty
version:             0.1.0.0
synopsis:            URI Shortener
description:         Please see README.md
homepage:            https://github.com/ashuto0sh/shawty#readme
license:             BSD3
license-file:        LICENSE
author:              Ashutosh Tripathi
maintainer:          azbycs@gmail.com
copyright:           None
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable shawty
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
