name:                scotty-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ashuto0sh/scotty-test#readme
license:             BSD3
license-file:        LICENSE
author:              Ashutosh Tripathi
maintainer:          azbycs@gmail.com
copyright:           None
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable scotty-test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wai-extra >=3.0.0
                     , wai-middleware-static
                     , scotty
                     , clay
                     , text
                     , blaze-html
                     , blaze-markup
                     , aeson
